--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: jkf
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-LazyData: TRUE
+Title: Jason Freels' personal helper functions
+Version: 1.0
+Date: 2016-01-15
+Author: Jason K. Freels
+Maintainer: <auburngrads@live.com>
+Description: Lots of little helpful goodies
+License: GPL-2
