--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,25 @@ Title: Jason Freels' personal helper functions
 Version: 1.0
 Date: 2016-01-15
 Author: Jason K. Freels
-Maintainer: <auburngrads@live.com>
-Description: Lots of little helpful goodies
+Maintainer: Jason K. Freels <jason.freels@afit.edu>
+Description: Reliability estimation functions and data sets for use with the
+    text "Statistical Methods for Reliability Data" Copyright 1998 by Meeker &
+    Escobar.
 License: GPL-2
+LazyData: true
+Depends:
+    R (>= 3.1.0)
+Imports:
+    graphics,
+    stats,
+    shiny,
+    shinyAce,
+    shinythemes,
+    devtools,
+    xtable,
+    knitr,
+    DT
+NeedsCompilation: no
+Archs: i386, x64
+Suggests: knitr
+RoxygenNote: 5.0.1
