--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,19 +10,8 @@ Description: Reliability estimation functions and data sets for use with the
     Escobar.
 License: GPL-2
 LazyData: true
-Depends:
-    R (>= 3.1.0)
-Imports:
-    graphics,
-    stats,
-    shiny,
-    shinyAce,
-    shinythemes,
-    devtools,
-    xtable,
-    knitr,
-    DT
+Depends: R (>= 3.1.0), graphics, stats, shiny
+Imports: devtools, shinyAce, shinythemes
 NeedsCompilation: no
 Archs: i386, x64
-Suggests: knitr
 RoxygenNote: 5.0.1
